--- a/index.html
+++ b/index.html
@@ -3,5 +3,9 @@
 <body>
 <h1>This is the test content.</h1>
 <h2>This is head tag.</h2>
+<h1>This is the test content.</h1>
+<h2>This is head tag.</h2>
+<h1>This is the test content.</h1>
+<h2>This is head tag.</h2>
 </body>
 </html>
